# conv-algorithms

./: .gitignore  CMakeLists.txt
cmake/: fetch_libtorch.cmake
src/: kn2row.cpp
